--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <title>btechie</title>
+  <title>Technology musings of btechie </title>
 </head>
 <body>
-  </body><h1>test page</h1>
+  </body><h1>Technology musings of btechie </h1>
 </html>
